test traffic example

--- a/programs/sring/Cargo.toml
+++ b/programs/sring/Cargo.toml
@@ -39,3 +39,5 @@ spl-associated-token-account = "7.0.0"
 spl-token-2022 = "9.0.0"
 solana-transaction-error = "2.2"
 solana-instructions-sysvar = "=2.2.1"
+tun = "0.8.3"
+crossbeam = "0.8.4"
